--- a/app/views/index.html
+++ b/app/views/index.html
@@ -38,7 +38,7 @@
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
           <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">RBC Common Capabilities</h1>
-          <span class="govuk-caption-m">Last updated: 07 January 2021</span>
+          <span class="govuk-caption-m">Last updated: 18 January 2021</span>
         </div>
       </div>
     </div>
@@ -71,8 +71,8 @@
               <br><br><br>
             </td>
             <td class="govuk-table__cell" >
-              <strong class="govuk-tag govuk-tag govuk-tag--blue">
-                To be tested
+              <strong class="govuk-tag govuk-tag govuk-tag--red">
+                Experimental
               </strong>
           </td>
           </tr>
