--- a/app/views/index-dwp-tasks.html
+++ b/app/views/index-dwp-tasks.html
@@ -43,10 +43,10 @@
 <!-- Section for Standards & accessiblity. -->
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
-    <p><strong class="govuk-tag govuk-tag--green">Green zone</strong>
+    <p><strong class="govuk-tag govuk-tag--green">Green </strong>
     </p>
     <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">DWP Tasks</h1>
-    <p>Last updated: 11 January 2021</p>
+    <p>Last updated: 18 January 2021</p>
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
@@ -62,7 +62,7 @@
             </h1>
         <p class="govuk-body">Service for case managers and decision makers to receive, view and manage their tasks.</p>
 
-
+<br><br>
       <table class="govuk-table">
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row" >
