Change 'detatils' to 'details'

--- a/app/views/my-tasks-using-tl/task-list-confirm-add-payment.html
+++ b/app/views/my-tasks-using-tl/task-list-confirm-add-payment.html
@@ -136,7 +136,7 @@
 
           </tr>
           <tr class="govuk-table__row">
-            <td class="govuk-table__cell"><a href="#">Update dependent detatils</a></td>
+            <td class="govuk-table__cell"><a href="#">Update dependent details</a></td>
             <td class="govuk-table__cell">Low</td>
             <td class="govuk-table__cell">14-01-2021</td>
             <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">Not started</strong></td>
