--- a/app/views/my-tasks/task-list-escalate-paper-claim.html
+++ b/app/views/my-tasks/task-list-escalate-paper-claim.html
@@ -122,7 +122,7 @@
 
           <tr class="govuk-table__row">
             <td class="govuk-table__cell"><a href="#">Update bank details </a></td>
-            <td class="govuk-table__cell">System error while adding detials, will try tomorrow</td>
+            <td class="govuk-table__cell">System error while adding details, will try tomorrow</td>
           </tr>
           <tr class="govuk-table__row">
             <td class="govuk-table__cell"><a href="/my-tasks/in-progress-2/check-disable-details">Check disabled person's details and appointee</a></td>
