--- a/app/views/my-tasks-using-tl/task-list-v3.html
+++ b/app/views/my-tasks-using-tl/task-list-v3.html
@@ -28,9 +28,16 @@
               My tasks
             </a>
           </li>
+
           <li class="govuk-header__navigation-item ">
             <a class="govuk-header__link" href="/my-tasks-using-tl/statistics/statistics">
               My clearances
+            </a>
+          </li>
+
+          <li class="govuk-header__navigation-item ">
+            <a class="govuk-header__link" href="#">
+              Tasks assigned by me
             </a>
           </li>
 
@@ -156,7 +163,6 @@
     <!-- Table to hold list of tasks -- END -->
   <br>
   <br>
-  <p><a href="#">View tasks assigned by me</a></p>
 
 
   </div>
