--- a/app/views/my-tasks-using-tl/task-list-v3.html
+++ b/app/views/my-tasks-using-tl/task-list-v3.html
@@ -58,7 +58,6 @@
   <div class="govuk-grid-column-two-thirds" style="width:65%;">
     <h1 class="govuk-heading-xl">
       My tasks
-      <!-- <span class="govuk-body"><a href="/my-tasks-using-tl/task-list-alternative">Alternate option</a></span> -->
     </h1>
   </div>
   <div class="govuk-grid-column-one-thirds" >
@@ -92,7 +91,7 @@
 
         </tr>
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell"><a href="/my-tasks-using-tl/in-progress-2/check-disable-details">Check disabled person's details and appointee</a></td>
+          <td class="govuk-table__cell"><a href="#">Check disabled person's details and appointee</a></td>
           <td class="govuk-table__cell">Very high</td>
           <td class="govuk-table__cell">James May</td>
           <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--blue">In progress</strong></td>
@@ -100,7 +99,7 @@
 
         </tr>
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell"><a href="/my-tasks-using-tl/claim-details/check-claim-details">Update ceased to care details </a></td>
+          <td class="govuk-table__cell"><a href="#>Update ceased to care details </a></td>
           <td class="govuk-table__cell">Very high</td>
           <td class="govuk-table__cell">Me</td>
           <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">Not started</strong></td>
@@ -108,7 +107,7 @@
 
         </tr>
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell"><a href="/my-tasks-using-tl/in-progress/verify-non-employment">Check non-employment income</a></td>
+          <td class="govuk-table__cell"><a href="#">Check non-employment income</a></td>
           <td class="govuk-table__cell">Low</td>
           <td class="govuk-table__cell">Me</td>
           <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--blue">In progress</strong></td>
@@ -116,7 +115,7 @@
 
         </tr>
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell"><a href="/my-tasks-using-tl/address-verify/verify-addresses">Update dependent qualifying benefits</a></td>
+          <td class="govuk-table__cell"><a href="#">Update dependent qualifying benefits</a></td>
           <td class="govuk-table__cell">Very high</td>
           <td class="govuk-table__cell">Andrew Smith</td>
           <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">Not started</strong></td>
@@ -140,7 +139,7 @@
 
         </tr>
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell"><a href="/my-tasks-using-tl/add-payment/add-payment">Add payment details</a></td>
+          <td class="govuk-table__cell"><a href="#">Add payment details</a></td>
           <td class="govuk-table__cell">Medium</td>
           <td class="govuk-table__cell">System</td>
           <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">Not started</strong></td>
