--- a/app/views/my-tasks-using-tl/task-list-v4.html
+++ b/app/views/my-tasks-using-tl/task-list-v4.html
@@ -68,10 +68,10 @@
       <nav class="navigation-secondary govuk-!-font-size-19">
         <ul>
           <li>
-            <a href="/my-tasks/task-list" class="active" aria-current="section">To-do</a>
+            <a href="/my-tasks-using-tl/task-list-v4" class="active" aria-current="section">To-do</a>
           </li>
           <li>
-            <a href="/my-tasks/task-list-assigned">Assigned to someone else</a>
+            <a href="/my-tasks-using-tl/task-list-v4-tab"> Assigned by me </a>
           </li>
         </ul>
       </nav>
@@ -81,6 +81,10 @@
 
   <div class="govuk-grid-column-full">
     <br><br>
+    <h2 class="govuk-heading-m" id="subsection-title">
+      To-do
+
+    </h2>
     <!-- Table to hold list of tasks -->
     <table class="govuk-table">
       <thead class="govuk-table__head">
@@ -101,7 +105,7 @@
 
         </tr>
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell"><a href="/my-tasks-using-tl/in-progress-2/check-disable-details">Check disabled person's details and appointee</a></td>
+          <td class="govuk-table__cell"><a href="#">Check disabled person's details and appointee</a></td>
           <td class="govuk-table__cell">Very high</td>
           <td class="govuk-table__cell">James May</td>
           <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--blue">In progress</strong></td>
@@ -109,7 +113,7 @@
 
         </tr>
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell"><a href="/my-tasks-using-tl/claim-details/check-claim-details">Update ceased to care details </a></td>
+          <td class="govuk-table__cell"><a href="#">Update ceased to care details </a></td>
           <td class="govuk-table__cell">Very high</td>
           <td class="govuk-table__cell">Me</td>
           <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">Not started</strong></td>
@@ -117,7 +121,7 @@
 
         </tr>
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell"><a href="/my-tasks-using-tl/in-progress/verify-non-employment">Check non-employment income</a></td>
+          <td class="govuk-table__cell"><a href="#">Check non-employment income</a></td>
           <td class="govuk-table__cell">Low</td>
           <td class="govuk-table__cell">Me</td>
           <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--blue">In progress</strong></td>
@@ -125,7 +129,7 @@
 
         </tr>
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell"><a href="/my-tasks-using-tl/address-verify/verify-addresses">Update dependent qualifying benefits</a></td>
+          <td class="govuk-table__cell"><a href="#">Update dependent qualifying benefits</a></td>
           <td class="govuk-table__cell">Very high</td>
           <td class="govuk-table__cell">Andrew Smith</td>
           <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">Not started</strong></td>
@@ -149,7 +153,7 @@
 
         </tr>
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell"><a href="/my-tasks-using-tl/add-payment/add-payment">Add payment details</a></td>
+          <td class="govuk-table__cell"><a href="#">Add payment details</a></td>
           <td class="govuk-table__cell">Medium</td>
           <td class="govuk-table__cell">System</td>
           <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">Not started</strong></td>
