--- a/app/views/my-tasks-using-tl/task-list-v3.html
+++ b/app/views/my-tasks-using-tl/task-list-v3.html
@@ -99,7 +99,7 @@
 
         </tr>
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell"><a href="#>Update ceased to care details </a></td>
+          <td class="govuk-table__cell"><a href="#"> Update ceased to care details </a></td>
           <td class="govuk-table__cell">Very high</td>
           <td class="govuk-table__cell">Me</td>
           <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--yellow">Not started</strong></td>
