--- a/app/views/my-tasks-using-tl/task-list-v4-tab.html
+++ b/app/views/my-tasks-using-tl/task-list-v4-tab.html
@@ -68,7 +68,7 @@
       <nav class="navigation-secondary govuk-!-font-size-19">
         <ul>
           <li>
-            <a href="/my-tasks-using-tl/task-list-v4" aria-current="section">To-do</a>
+            <a href="/my-tasks-using-tl/task-list-v4" aria-current="section">My tasks</a>
           </li>
           <li>
             <a href="/my-tasks-using-tl/task-list-v4-tab" class="active">Assigned by me</a>
