--- a/app/views/my-tasks-using-tl/task-list-v4.html
+++ b/app/views/my-tasks-using-tl/task-list-v4.html
@@ -68,7 +68,7 @@
       <nav class="navigation-secondary govuk-!-font-size-19">
         <ul>
           <li>
-            <a href="/my-tasks-using-tl/task-list-v4" class="active" aria-current="section">To-do</a>
+            <a href="/my-tasks-using-tl/task-list-v4" class="active" aria-current="section">My tasks</a>
           </li>
           <li>
             <a href="/my-tasks-using-tl/task-list-v4-tab"> Assigned by me </a>
@@ -82,7 +82,7 @@
   <div class="govuk-grid-column-full">
     <br><br>
     <h2 class="govuk-heading-m" id="subsection-title">
-      To-do
+      My tasks
 
     </h2>
     <!-- Table to hold list of tasks -->
