--- a/app/views/my-tasks-using-tl/in-progress/assign-this-task.html
+++ b/app/views/my-tasks-using-tl/in-progress/assign-this-task.html
@@ -430,7 +430,7 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="contact" name="contact" type="checkbox" value="email" data-aria-controls="conditional-contact">
         <label class="govuk-label govuk-checkboxes__label" for="contact">
-          Add task to 'Assigned by me' list to follow progress
+          Add task to 'Assigned to someone else' list to follow progress
         </label>
       </div>
 
