--- a/app/views/my-tasks/in-progress/assign-this-task.html
+++ b/app/views/my-tasks/in-progress/assign-this-task.html
@@ -376,19 +376,15 @@
 
         <select id="assign-team-member-select" class="govuk-select" name="assign-team-member" >
           <option value="no-member" selected>--Select--</option>
-          <option value="Andrew Hardy" >Andrew Hardy</option>
-          <option value="Anjita Lamzel" >Anjita Lamzel </option>
-          <option value="Benson Kemi" >Benson Kemi</option>
-          <option value="Dan Wood" >Dan Wood</option>
-          <option value="Genine Keogh" >Genine Keogh </option>
-          <option value="Jeffrey Douglass" >Jeffrey Douglass</option>
+          <option value="Andrew Hardy" >Andy M</option>
+          <option value="Anjita Lamzel" >James May </option>
+          <option value="Benson Kemi" >Raj Kumar</option>
+          <option value="Dan Wood" >Jonathan Woo</option>
+          <option value="Genine Keogh" >Jessica K </option>
+          <option value="Jeffrey Douglass" >John Jeffrey</option>
 
-          <option value="Macleod Miriam" >Macleod Miriam</option>
-          <option value="Mark Duncan" >Mark Duncan </option>
-          <option value="Pablo Cabello" >Pablo Cabello</option>
-          <option value="Phil Merrilees" >Phil Merrilees</option>
-          <option value="Sarat Kumar" >Sarat Kumar </option>
-          <option value="Thackray Tony" >Thackray Tony</option>
+          <option value="Macleod Miriam" >May M</option>
+          <option value="Mark Duncan" >Malcome K </option>
         </select>
         </div>
 
