--- a/app/views/my-tasks-using-tl/add-payment/i-cannot-do-this-task-3.html
+++ b/app/views/my-tasks-using-tl/add-payment/i-cannot-do-this-task-3.html
@@ -74,7 +74,7 @@
 
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="/my-tasks-using-tl/claim-details/check-claim-details">Back</a>
+  <a class="govuk-back-link" href="add-payment">Back</a>
 {% endblock %}
 
 
