Changed 'Assigned by me' to 'Assigned to someone else'

--- a/app/views/my-tasks-using-tl/task-list-assign-paper-claim.html
+++ b/app/views/my-tasks-using-tl/task-list-assign-paper-claim.html
@@ -168,7 +168,7 @@
     <br>
     <br>
     <h2 class="govuk-heading-m" id="subsection-title">
-      Assigned by me
+      Assigned to someone else
       <label class="govuk-hint" for="more-detail">
         Tasks being followed
       </label>
