--- a/app/views/my-tasks-using-tl/task-list-v4-tab.html
+++ b/app/views/my-tasks-using-tl/task-list-v4-tab.html
@@ -71,7 +71,7 @@
             <a href="/my-tasks-using-tl/task-list-v4" aria-current="section">My tasks</a>
           </li>
           <li>
-            <a href="/my-tasks-using-tl/task-list-v4-tab" class="active">Assigned by me</a>
+            <a href="/my-tasks-using-tl/task-list-v4-tab" class="active">Tasks assigned to someone else</a>
           </li>
         </ul>
       </nav>
