--- a/app/views/my-tasks-using-tl/task-list-pause-update-care.html
+++ b/app/views/my-tasks-using-tl/task-list-pause-update-care.html
@@ -57,7 +57,7 @@
   </div>
   <div class="govuk-notification-banner__content">
     <p class="govuk-notification-banner__heading">
-      Task parked and status changed to in progress
+      Task parked and status changed to 'in progress'
     </p>
     <p class="govuk-body">Reason: {{ data['pause-this-task-care'] | default('No reason provided') }}</p>
   </div>
@@ -174,7 +174,7 @@
     <br>
     <br>
     <h2 class="govuk-heading-m" id="subsection-title">
-      Assigned by me
+      Assigned to someone else
       <label class="govuk-hint" for="more-detail">
         Tasks being followed
       </label>
