--- a/app/views/my-tasks-using-tl/task-list-v4.html
+++ b/app/views/my-tasks-using-tl/task-list-v4.html
@@ -71,7 +71,7 @@
             <a href="/my-tasks-using-tl/task-list-v4" class="active" aria-current="section">My tasks</a>
           </li>
           <li>
-            <a href="/my-tasks-using-tl/task-list-v4-tab"> Assigned by me </a>
+            <a href="/my-tasks-using-tl/task-list-v4-tab"> Assigned to someone else </a>
           </li>
         </ul>
       </nav>
