--- a/app/views/my-tasks-using-tl/task-list-v5.html
+++ b/app/views/my-tasks-using-tl/task-list-v5.html
@@ -37,7 +37,7 @@
 
           <li class="govuk-header__navigation-item ">
             <a class="govuk-header__link" href="#">
-              Tasks assigned by me
+              Assigned to someone else
             </a>
           </li>
 
