--- a/app/views/index-dwp-tasks.html
+++ b/app/views/index-dwp-tasks.html
@@ -57,7 +57,7 @@
   <main class="govuk-main-wrapper">
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-      <h1 class="govuk-heading-m">
+      <h1 class="govuk-heading-l">
         Agents
             </h1>
         <p class="govuk-body">Service for case managers and decision makers to receive, view and manage their tasks.</p>
@@ -67,11 +67,14 @@
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row" >
           <td class="govuk-table__cell " style="width:28% !important;">
-            <a href="/my-tasks/task-list">Manage tasks using tabs and task list</a>
+            <h1 class="govuk-heading-m">
+              Manage task
+                  </h1>
+            <a href="/my-tasks/task-list">Manage task </a>
 
             <span class="govuk-heading-s" style="padding-top:2rem;">Notes</span>
               <ul class="govuk-list govuk-list--bullet">
-              <li>New journey added to view, cancel and assign tasks</li>
+              <li>Aim is to understand what data elements help agents choose, perform and manage an task</li>
             </ul>
 
           </td>
@@ -88,11 +91,19 @@
 
         <tr class="govuk-table__row">
           <td class="govuk-table__cell" style="width:78%;">
-            <a href="/my-tasks-using-tl/task-list">Manage tasks using task list</a>
+            <br><br>
+            <h1 class="govuk-heading-m">
+              Manage task - landing pages
+                  </h1>
+
+            <a href="/my-tasks-using-tl/task-list-v2">Version 1</a><br>
+            <a href="/my-tasks-using-tl/task-list-v3a">Version 2</a><br>
+            <a href="/my-tasks-using-tl/task-list">Version 3</a><br>
 
             <span class="govuk-heading-s" style="padding-top:2rem;">Notes</span>
               <ul class="govuk-list govuk-list--bullet">
-              <li>Modified version of prototype to test operations on a task</li>
+              <li>Aim is to understand what data elements help agents choose an task</li>
+              <li>Aim is to understand states of task</li>
           </ul>
 
           </td>
