--- a/app/views/index.html
+++ b/app/views/index.html
@@ -67,7 +67,7 @@
           <tr class="govuk-table__row">
             <td class="govuk-table__cell" style="width:79%;">
               <h1 class="govuk-heading-m"><a href="index-dwp-tasks">Manage tasks</a></h1>
-              <p>Prototypes for case managers and decision makers to receive, view and manage their tasks.</p>
+              <p>Prototypes for case managers and decision makers to receive, view, track and manage their tasks.</p>
               <br><br><br>
             </td>
             <td class="govuk-table__cell" >
