--- a/app/views/my-tasks-using-tl/task-list-v3a.html
+++ b/app/views/my-tasks-using-tl/task-list-v3a.html
@@ -90,12 +90,12 @@
   </h2>
   <ul class="govuk-tabs__list">
     <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
-      <a class="govuk-tabs__tab" href="#past-day">
+      <a class="govuk-tabs__tab" href="#in-progress">
         In progress
       </a>
     </li>
     <li class="govuk-tabs__list-item">
-      <a class="govuk-tabs__tab" href="#past-week">
+      <a class="govuk-tabs__tab" href="#assigned-to-me">
         Assigned to me
       </a>
     </li>
