--- a/app/views/index-dwp-tasks.html
+++ b/app/views/index-dwp-tasks.html
@@ -68,9 +68,9 @@
         <tr class="govuk-table__row" >
           <td class="govuk-table__cell " style="width:28% !important;">
             <h1 class="govuk-heading-m">
-              Manage task
+              Manage tasks
                   </h1>
-            <a href="/my-tasks/task-list">Manage task </a>
+            <a href="/my-tasks/task-list">Manage tasks </a>
 
             <span class="govuk-heading-s" style="padding-top:2rem;">Notes</span>
               <ul class="govuk-list govuk-list--bullet">
@@ -93,7 +93,7 @@
           <td class="govuk-table__cell" style="width:78%;">
             <br><br>
             <h1 class="govuk-heading-m">
-              Manage task - landing pages
+              Manage tasks - landing pages
                   </h1>
 
             <a href="/my-tasks-using-tl/task-list-v2">Version 1</a><br>
@@ -108,6 +108,7 @@
 
           </td>
           <td class="govuk-table__cell">
+            <br><br>
             <strong class="govuk-tag govuk-tag govuk-tag--red">
               Experimental
             </strong>
