--- a/app/views/index.html
+++ b/app/views/index.html
@@ -60,14 +60,14 @@
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
         <!-- DWP Tasks section start -->
-        <h1 class="govuk-heading-l"> DWP Tasks <p class="govuk-body">Service for agents and citizens to view and manage tasks related to claims.</p></h1>
+        <h1 class="govuk-heading-l"> DWP Tasks <p class="govuk-body">Service for agents and citizens to view, track and manage tasks</p></h1>
         <br><br>
         <table class="govuk-table" >
         <tbody class="govuk-table__body" >
           <tr class="govuk-table__row">
             <td class="govuk-table__cell" style="width:79%;">
               <h1 class="govuk-heading-m"><a href="index-dwp-tasks">Manage tasks</a></h1>
-              <p>Prototypes for case managers and decision makers to receive, view, track and manage their tasks.</p>
+              <p>Prototypes for case managers and decision makers to receive, view, track and manage their tasks</p>
               <br><br><br>
             </td>
             <td class="govuk-table__cell" >
