--- a/app/views/index-dwp-tasks.html
+++ b/app/views/index-dwp-tasks.html
@@ -48,6 +48,18 @@
     <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">DWP Tasks</h1>
     <p>Last updated: 18 January 2021</p>
 
+
+
+    <div class="govuk-error-summary" style="border-color:#999999 !important;"aria-labelledby="error-summary-title"  data-module="govuk-error-summary">
+      <h2 class="govuk-error-summary__title" id="error-summary-title">
+         These are conceptual prootypes
+       </h2>
+  <div class="govuk-error-summary__body">
+    <p>Prototypes created to sense check insights, assumptions and to gain deeper understanding of user needs and behaviours </p>
+  </div>
+</div>
+
+
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 </div>
