--- a/app/views/index-dwp-tasks.html
+++ b/app/views/index-dwp-tasks.html
@@ -52,10 +52,10 @@
 
     <div class="govuk-error-summary" style="border-color:#999999 !important;"aria-labelledby="error-summary-title"  data-module="govuk-error-summary">
       <h2 class="govuk-error-summary__title" id="error-summary-title">
-         These are conceptual prootypes
+         These are conceptual prototypes
        </h2>
   <div class="govuk-error-summary__body">
-    <p>Prototypes created to sense check insights, assumptions and to gain deeper understanding of user needs and behaviours </p>
+    <p>Prototypes created to sense check insights, assumptions and to gain deeper understanding of user needs and behaviours (for future capabilities) </p>
   </div>
 </div>
 
